improvements in shacl generation